# seaset

./: .gitignore  README.md  pyproject.toml
Notebooks/: CMEMS.ipynb  COOPS.ipynb  Catalog.ipynb  EMODNET.ipynb  GESLA3_ALL.csv  IOC.ipynb  SOEST.ipynb  Updated_Catalog.ipynb  catalog.csv  catalog_full.csv  catalog_minimal.csv  catalog_new.csv  cmems.csv  coops_stations.csv  emodnet.csv  gesla.py  gloss.csv  ioc.csv  ioc2.csv  ioc3.csv  update_catalog.py
Notebooks/.ipynb_checkpoints/: CMEMS-pydap-checkpoint.ipynb  CRITECH-checkpoint.ipynb  GLOSS-checkpoint.ipynb  Obs-checkpoint.ipynb  uhslc-checkpoint.ipynb
